--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1050,14 +1050,20 @@ input:checked + .toggle-bg {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
+.mr-1 {
+  margin-right: 0.25rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
+.mb-20 {
+  margin-bottom: 5rem;
+}
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-.mr-1 {
-  margin-right: 0.25rem;
 }
 .mt-3 {
   margin-top: 0.75rem;
@@ -1085,9 +1091,6 @@ input:checked + .toggle-bg {
 }
 .mr-5 {
   margin-right: 1.25rem;
-}
-.mt-5 {
-  margin-top: 1.25rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
@@ -1140,17 +1143,17 @@ input:checked + .toggle-bg {
 .h-16 {
   height: 4rem;
 }
-.h-6 {
-  height: 1.5rem;
-}
-.h-modal {
-  height: calc(100% - 2rem);
-}
 .h-full {
   height: 100%;
 }
 .h-4 {
   height: 1rem;
+}
+.h-6 {
+  height: 1.5rem;
+}
+.h-modal {
+  height: calc(100% - 2rem);
 }
 .h-14 {
   height: 3.5rem;
@@ -1178,8 +1181,14 @@ input:checked + .toggle-bg {
   width: -moz-fit-content;
   width: fit-content;
 }
+.w-4 {
+  width: 1rem;
+}
 .w-full {
   width: 100%;
+}
+.w-1\/2 {
+  width: 50%;
 }
 .w-\[250px\] {
   width: 250px;
@@ -1196,17 +1205,11 @@ input:checked + .toggle-bg {
 .w-3\/12 {
   width: 25%;
 }
-.w-1\/2 {
-  width: 50%;
-}
 .w-4\/12 {
   width: 33.333333%;
 }
 .w-1\/12 {
   width: 8.333333%;
-}
-.w-4 {
-  width: 1rem;
 }
 .w-\[10\%\] {
   width: 10%;
@@ -1477,6 +1480,9 @@ input:checked + .toggle-bg {
 .border-double {
   border-style: double;
 }
+.border-none {
+  border-style: none;
+}
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1488,10 +1494,6 @@ input:checked + .toggle-bg {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.border-green-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(4 108 78 / var(--tw-border-opacity));
 }
 .border-gray-100 {
   --tw-border-opacity: 1;
@@ -1508,6 +1510,10 @@ input:checked + .toggle-bg {
 .border-blue-500 {
   --tw-border-opacity: 1;
   border-color: rgb(63 131 248 / var(--tw-border-opacity));
+}
+.border-green-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(4 108 78 / var(--tw-border-opacity));
 }
 .border-transparent {
   border-color: transparent;
@@ -1704,12 +1710,12 @@ input:checked + .toggle-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
+.bg-transparent {
+  background-color: transparent;
+}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-transparent {
-  background-color: transparent;
 }
 .bg-gray-500 {
   --tw-bg-opacity: 1;
@@ -1724,6 +1730,9 @@ input:checked + .toggle-bg {
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+.fill-blue-600 {
+  fill: #1C64F2;
 }
 .p-6 {
   padding: 1.5rem;
@@ -1762,9 +1771,17 @@ input:checked + .toggle-bg {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .px-5 {
   padding-left: 1.25rem;
@@ -1774,17 +1791,9 @@ input:checked + .toggle-bg {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
 }
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .py-6 {
   padding-top: 1.5rem;
@@ -1796,6 +1805,9 @@ input:checked + .toggle-bg {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
@@ -2097,14 +2109,9 @@ a {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.hover\:bg-blue-700:hover {
+.hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(26 86 219 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(155 28 28 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-100:hover {
@@ -2112,19 +2119,24 @@ a {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(155 28 28 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-blue-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(30 66 159 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 86 219 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-yellow-500:hover {
@@ -2147,9 +2159,9 @@ a {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:text-blue-300:hover {
+.hover\:text-yellow-200:hover {
   --tw-text-opacity: 1;
-  color: rgb(164 202 254 / var(--tw-text-opacity));
+  color: rgb(252 233 106 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-900:hover {
@@ -2189,6 +2201,10 @@ a {
 
 .focus\:z-10:focus {
   z-index: 10;
+}
+
+.focus\:border-b-4:focus {
+  border-bottom-width: 4px;
 }
 
 .focus\:border-blue-500:focus {
@@ -2339,6 +2355,11 @@ a {
 .dark .dark\:text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -2552,6 +2573,10 @@ a {
     margin-bottom: 0.75rem;
   }
 
+  .md\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+
   .md\:mb-0 {
     margin-bottom: 0px;
   }
@@ -2612,6 +2637,10 @@ a {
     height: auto;
   }
 
+  .md\:w-\[30px\] {
+    width: 30px;
+  }
+
   .md\:w-2\/12 {
     width: 16.666667%;
   }
@@ -2622,10 +2651,6 @@ a {
 
   .md\:w-\[150px\] {
     width: 150px;
-  }
-
-  .md\:w-1\/12 {
-    width: 8.333333%;
   }
 
   .md\:w-1\/4 {
