add mobile styles

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -989,13 +989,13 @@ input:checked + .toggle-bg {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
 }
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 .mx-2 {
   margin-left: 0.5rem;
@@ -1005,6 +1005,10 @@ input:checked + .toggle-bg {
   margin-left: auto;
   margin-right: auto;
 }
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
@@ -1013,18 +1017,14 @@ input:checked + .toggle-bg {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
 }
-.my-12 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
 .mb-5 {
   margin-bottom: 1.25rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.mr-2 {
-  margin-right: 0.5rem;
 }
 .mt-8 {
   margin-top: 2rem;
@@ -1034,6 +1034,9 @@ input:checked + .toggle-bg {
 }
 .mt-5 {
   margin-top: 1.25rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -1064,9 +1067,6 @@ input:checked + .toggle-bg {
 }
 .-mt-px {
   margin-top: -1px;
-}
-.mt-3 {
-  margin-top: 0.75rem;
 }
 .ml-auto {
   margin-left: auto;
@@ -1137,9 +1137,6 @@ input:checked + .toggle-bg {
 .h-full {
   height: 100%;
 }
-.h-4 {
-  height: 1rem;
-}
 .h-5 {
   height: 1.25rem;
 }
@@ -1155,6 +1152,9 @@ input:checked + .toggle-bg {
 .h-modal {
   height: calc(100% - 2rem);
 }
+.h-4 {
+  height: 1rem;
+}
 .h-14 {
   height: 3.5rem;
 }
@@ -1164,22 +1164,8 @@ input:checked + .toggle-bg {
 .min-h-screen {
   min-height: 100vh;
 }
-.w-\[200px\] {
-  width: 200px;
-}
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-.w-4 {
-  width: 1rem;
-}
 .w-full {
   width: 100%;
-}
-.w-1\/2 {
-  width: 50%;
 }
 .w-\[250px\] {
   width: 250px;
@@ -1205,11 +1191,17 @@ input:checked + .toggle-bg {
 .w-3\/12 {
   width: 25%;
 }
+.w-1\/2 {
+  width: 50%;
+}
 .w-4\/12 {
   width: 33.333333%;
 }
 .w-1\/12 {
   width: 8.333333%;
+}
+.w-4 {
+  width: 1rem;
 }
 .w-\[10\%\] {
   width: 10%;
@@ -1378,9 +1370,6 @@ input:checked + .toggle-bg {
 }
 .overflow-hidden {
   overflow: hidden;
-}
-.overflow-x-auto {
-  overflow-x: auto;
 }
 .overflow-y-auto {
   overflow-y: auto;
@@ -1989,13 +1978,13 @@ input:checked + .toggle-bg {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(240 82 82 / var(--tw-text-opacity));
+}
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 .text-gray-300 {
   --tw-text-opacity: 1;
@@ -2402,11 +2391,6 @@ a {
   --tw-bg-opacity: 0.8;
 }
 
-.dark .dark\:text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -2422,19 +2406,24 @@ a {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(63 131 248 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.dark .dark\:text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .dark .dark\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(63 131 248 / var(--tw-text-opacity));
 }
 
 .dark .dark\:placeholder-gray-400::-moz-placeholder {
@@ -2628,9 +2617,23 @@ a {
     margin: auto;
   }
 
+  .md\:mx-3 {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+  }
+
+  .md\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
   .md\:my-3 {
     margin-top: 0.75rem;
     margin-bottom: 0.75rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:mb-6 {
@@ -2639,10 +2642,6 @@ a {
 
   .md\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .md\:mt-0 {
-    margin-top: 0px;
   }
 
   .md\:mt-3 {
@@ -2697,6 +2696,16 @@ a {
     height: auto;
   }
 
+  .md\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .md\:w-fit {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .md\:w-\[30px\] {
     width: 30px;
   }
@@ -2713,16 +2722,16 @@ a {
     width: 150px;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:w-1\/4 {
     width: 25%;
   }
 
   .md\:w-auto {
     width: auto;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
   }
 
   .md\:min-w-\[1300px\] {
@@ -2755,6 +2764,10 @@ a {
 
   .md\:flex-col {
     flex-direction: column;
+  }
+
+  .md\:justify-end {
+    justify-content: flex-end;
   }
 
   .md\:justify-center {
